<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical" 
        android:padding="15dp" >    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium" 
			android:text="@string/torch_settings_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/torch_settings_description" />
        <Button
	        android:id="@+id/torch_settings_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/torch_settings_button"
	    />
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:orientation="vertical"
	        android:background="@color/list_divider" 
	        android:layout_marginTop="15dp" >
		</LinearLayout>
	</LinearLayout>
</ScrollView>