<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical" 
        android:padding="15dp" >
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_welcome"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:orientation="vertical"
	        android:background="@color/list_divider" 
	        android:layout_marginTop="15dp" >
		</LinearLayout>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_restart_systemui"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_restart_requiresbusyboxroot"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    <Button
	        android:id="@+id/restart_systemui"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_restart_systemui"
	        />
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:orientation="vertical"
	        android:background="@color/list_divider" 
	        android:layout_marginTop="15dp" >
		</LinearLayout>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_restart_popupuireceiver"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_restart_requiresbusyboxroot"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    <Button
	        android:id="@+id/restart_popupuireceiver"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/general_restart_popupuireceiver"
	        />
	</LinearLayout>
</ScrollView>